feat: Add Ishikawa diagram

--- a/demos/index.html
+++ b/demos/index.html
@@ -56,6 +56,9 @@
         <h2><a href="./mindmap.html">Mindmap</a></h2>
       </li>
       <li>
+        <h2><a href="./ishikawa.html">Ishikawa</a></h2>
+      </li>
+      <li>
         <h2><a href="./pie.html">Pie</a></h2>
       </li>
       <li>
