--- a/demos/venn.html
+++ b/demos/venn.html
@@ -56,7 +56,7 @@
       <div class="dark-sample">
         <h2>Dark mode sample</h2>
         <pre class="mermaid">
-        %%{init: { 'theme': 'dark', 'themeVariables': { 'background': '#0d1117' } } }%%
+        %%{init: { 'theme': 'dark' } }%%
         venn-beta
           title Night Shift Sets
           set A     label: Frontend
@@ -134,6 +134,28 @@
           text "B9 with a loooooooong label"
         union A,B    label: Common,      size: 3
           text shared label: "shared note"
+      </pre>
+      <hr />
+      <pre class="mermaid">
+      %%{init: { 'theme': 'forest' } }%%
+      venn-beta
+        title Forest Theme
+        set A     label: Flora
+        set B     label: Fauna
+        set C     label: Fungi
+        union A,B   label: Symbiosis
+        union B,C   label: Ecosystem
+        union A,C   label: Decomposition
+        union A,B,C label: Biodiversity
+      </pre>
+      <hr />
+      <pre class="mermaid">
+      %%{init: { 'theme': 'neutral', 'themeVariables': { 'primaryColor': '#4a90d9', 'secondaryColor': '#d94a4a' } } }%%
+      venn-beta
+        title Neutral Theme with Custom Colors
+        set X     label: Design,   size: 15
+        set Y     label: Engineering, size: 15
+        union X,Y   label: Product,   size: 5
       </pre>
     </div>
     <script type="module">
