--- a/demos/venn.html
+++ b/demos/venn.html
@@ -37,7 +37,7 @@
         title Very Basic Venn Diagram
         set A
         set B
-        union A,B   label: AB
+        union A,B["AB"]
       </pre>
       <hr />
       <pre class="mermaid">
@@ -46,10 +46,14 @@
         set A
         set B
         set C
-        union A,B     label: AB,   background: skyblue
-        union B,C     label: BC,   background: orange
-        union A,C     label: AC,   background: lightgreen
-        union A,B,C   label: ABC,  background: white,      color: red
+        union A,B["AB"]
+        union B,C["BC"]
+        union A,C["AC"]
+        union A,B,C["ABC"]
+        style A,B fill:skyblue
+        style B,C fill:orange
+        style A,C fill:lightgreen
+        style A,B,C fill:white, color:red
       </pre>
 
       <hr />
@@ -59,15 +63,15 @@
         %%{init: { 'theme': 'dark' } }%%
         venn-beta
           title Night Shift Sets
-          set A     label: Frontend
+          set A["Frontend"]
             text d3
             text react
-          set B     label: Backend
-          set C     label: Ops
-          union A,B   label: APIs
-          union B,C   label: Infra
-          union A,C   label: SRE
-          union A,B,C label: Shared
+          set B["Backend"]
+          set C["Ops"]
+          union A,B["APIs"]
+          union B,C["Infra"]
+          union A,C["SRE"]
+          union A,B,C["Shared"]
         </pre>
       </div>
       <hr />
@@ -75,87 +79,94 @@
       %%{init: { 'venn': { 'useDebugLayout': true } } }%%
       venn-beta
         title Four sets with all pairwise intersections
-        set A      size: 18
-        set B      size: 18
-        set C      size: 18
-        set D      size: 18
-        union A,B    size: 5
-        union A,C    size: 2.5
-        union A,D    size: 5
-        union B,C    size: 5
-        union B,D    size: 2.5
-        union C,D    size: 5
+        set A:18
+        set B:18
+        set C:18
+        set D:18
+        union A,B:5
+        union A,C:2.5
+        union A,D:5
+        union B,C:5
+        union B,D:2.5
+        union C,D:5
       </pre>
       <hr />
       <pre class="mermaid">
       venn-beta
         title Three concatenated sets and one isolated set
-        set A    size: 15,  label: ALPHA
-        set B    size: 5,   label: BETA
-        set C    size: 10
-        set D    size: 10,  label: DELTA
-        union A,B  size: 1,   label: AB,    background: gold
-        union B,D  size: 1
+        set A["ALPHA"]:15
+        set B["BETA"]:5
+        set C:10
+        set D["DELTA"]:10
+        union A,B["AB"]:1
+        union B,D:1
+        style A,B fill:gold
       </pre>
       <hr />
       <pre class="mermaid">
       venn-beta
         title Text nodes inside sets
-        set A      label: Colored texts,  size: 18
-          text rgba      label: rgba,        color: rgba(255, 0, 0, 0.75)
-          text rgb       label: rgb,         color: rgb(255, 0, 128)
-          text hex       label: hex,         color: #ff33cc
-          text colorname label: color name,  color: green
-        set B      label: Default texts,  size: 12
-          text default   label: default color
-        union A,B    label: Common,         size: 5
-          text shared    label: "shared note"
+        set A["Colored texts"]:18
+          text rgba["rgba"]
+          text rgb["rgb"]
+          text hex["hex"]
+          text colorname["color name"]
+        set B["Default texts"]:12
+          text default["default color"]
+        union A,B["Common"]:5
+          text shared["shared note"]
+        style rgba color:rgba(255, 0, 0, 0.75)
+        style rgb color:rgb(255, 0, 128)
+        style hex color:#ff33cc
+        style colorname color:green
       </pre>
       <hr />
       <pre class="mermaid">
       %%{init: { 'venn': { 'useDebugLayout': true } } }%%
       venn-beta
         title Many text nodes in debug text layout mode
-        set A      label: Five nodes,  size: 18
+        set A["Five nodes"]:18
           text A1
           text A2
           text A3
           text A4
           text A5
-        set B      label: Nine nodes,  size: 18
+        set B["Nine nodes"]:18
           text B1
           text B2
           text B3
-          text B4  color: red
+          text B4
           text B5
           text B6
-          text B7  label: "Long label",  color: green
+          text B7["Long label"]
           text "B8 with a long label"
           text "B9 with a loooooooong label"
-        union A,B    label: Common,      size: 3
-          text shared label: "shared note"
+        union A,B["Common"]:3
+          text shared["shared note"]
+        style B4 color:red
+        style B7 color:green
       </pre>
       <hr />
       <pre class="mermaid">
       %%{init: { 'theme': 'forest' } }%%
       venn-beta
         title Forest Theme
-        set A     label: Flora
-        set B     label: Fauna
-        set C     label: Fungi
-        union A,B   label: Symbiosis
-        union B,C   label: Ecosystem
-        union A,C   label: Decomposition
-        union A,B,C label: Biodiversity
+        set A["Flora"]
+        set B["Fauna"]
+        set C["Fungi"]
+        union A,B["Symbiosis"]
+        union B,C["Ecosystem"]
+        union A,C["Decomposition"]
+        union A,B,C["Biodiversity"]
       </pre>
       <hr />
       <pre class="mermaid">
       %%{init: { 'theme': 'neutral', 'themeVariables': { 'primaryColor': '#4a90d9', 'secondaryColor': '#d94a4a' } } }%%
       venn-beta
         title Neutral Theme with Custom Colors
-        set X     label: Design,   size: 15
-        set Y     label: Engineering, size: 15
-        union X,Y   label: Product,   size: 5
+        set X["Design"]:15
+        set Y["Engineering"]:15
+        union X,Y["Product"]:5
       </pre>
     </div>
     <script type="module">
