--- a/demos/ishikawa.html
+++ b/demos/ishikawa.html
@@ -98,6 +98,25 @@ ishikawa-beta
           6-6
     </pre>
 
+    <h2>Hand-drawn mode</h2>
+    <pre class="mermaid">
+%%{init: { 'look': 'handDrawn', 'handDrawnSeed': 1 } }%%
+ishikawa-beta
+  Blurry Photo
+  Process
+    Out of focus
+    Shutter speed too slow
+  User
+    Shaky hands
+  Equipment
+    LENS
+      Dirty lens
+    SENSOR
+      Damaged sensor
+  Environment
+    Too dark
+    </pre>
+
     <script type="module">
       import mermaid from './mermaid.esm.mjs';
 
