Demo forest theme

--- a/demos/ishikawa.html
+++ b/demos/ishikawa.html
@@ -117,6 +117,25 @@ ishikawa-beta
     Too dark
     </pre>
 
+    <h2>Forest theme</h2>
+    <pre class="mermaid">
+%%{init: { 'theme': 'forest' } }%%
+ishikawa-beta
+  Low Test Coverage
+  People
+    Lack of training
+    Insufficient reviewers
+  Process
+    No CI pipeline
+    Skipping code review
+  Tools
+    Outdated test framework
+    Flaky test runner
+  Environment
+    Tight deadlines
+    Unclear requirements
+    </pre>
+
     <script type="module">
       import mermaid from './mermaid.esm.mjs';
 
