--- a/demos/ishikawa.html
+++ b/demos/ishikawa.html
@@ -101,8 +101,7 @@ ishikawa-diagra
       6-4
       6-5
       6-6
-</pre
-    >
+    </pre>
 
     <h2>Hand-drawn mode</h2>
     <pre class="mermaid">
